# Image-Signal-Processor

./: .gitattributes  .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  codeql.yml  gitleaks.yml
artifacts/baselines/: baseline_metrics.txt  norm_weights.json
artifacts/checkpoints/cnn_pretrain/: cnn_pretrained.pth  pretrain_eval_metrics.json  pretrain_history.json
artifacts/checkpoints/e2e_quality/seed42/: e2e_best.pth  e2e_epoch_01.pth  e2e_epoch_02.pth  e2e_epoch_03.pth  e2e_epoch_04.pth  e2e_epoch_05.pth  e2e_epoch_06.pth  e2e_epoch_07.pth  e2e_epoch_08.pth  e2e_epoch_09.pth  e2e_epoch_10.pth  e2e_epoch_11.pth  e2e_epoch_12.pth  e2e_epoch_13.pth  e2e_epoch_14.pth  e2e_epoch_15.pth  e2e_history.json  e2e_resume.pth
artifacts/checkpoints/e2e_quality/seed7/: e2e_best.pth  e2e_epoch_01.pth  e2e_epoch_02.pth  e2e_epoch_03.pth  e2e_epoch_04.pth  e2e_epoch_05.pth  e2e_epoch_06.pth  e2e_epoch_07.pth  e2e_epoch_08.pth  e2e_epoch_09.pth  e2e_epoch_10.pth  e2e_epoch_11.pth  e2e_epoch_12.pth  e2e_epoch_13.pth  e2e_epoch_14.pth  e2e_epoch_15.pth  e2e_history.json  e2e_resume.pth
artifacts/checkpoints/optuna_tuning/: optuna_best_params.json  optuna_isp_knobs.db  optuna_trials.csv
artifacts/results/full_video_eval/: report_isp_cnn_day_tunnel.json  report_isp_cnn_day_tunnel.md
artifacts/results/full_video_eval_day_tunnel/: report_baseline_isp.json  report_baseline_isp.md  report_e2e.json  report_e2e.md  report_e2e_optuna.json  report_e2e_optuna.md  report_warm_start_cnn.json  report_warm_start_cnn.md
artifacts/results/full_video_eval_night/: report_baseline_isp.json  report_baseline_isp.md  report_e2e.json  report_e2e.md  report_e2e_optuna.json  report_e2e_optuna.md  report_warm_start_cnn.json  report_warm_start_cnn.md
artifacts/sanity/e2e_smoke/: smoke_best.pth  smoke_epoch_02.pth  smoke_history.json  smoke_resume.pth
artifacts/sanity/quality_overfit/: quality_overfit_history.csv  quality_overfit_summary.json
data/: imx623.toml
dataset/: README.md  splits.json  splits_mini.json  test_manifest.csv
docs/: ARCHITECTURE.md
examples/: minimal_camera.toml
isp/: __init__.py
isp/color/: __init__.py  conversions.py
isp/config/: __init__.py  config_reader.py  scene_presets.py
isp/data/: __init__.py  dataset_utils.py
isp/evaluation/: __init__.py  baseline_io.py  composite_score.py  evaluation_utils.py
isp/io/: __init__.py  video_reader.py  video_writer.py  yuv_reader.py
isp/models/: __init__.py  residual_cnn.py
isp/pipeline/: __init__.py  pipeline.py
isp/pipeline/stages/: __init__.py  awb.py  ccm.py  decompand.py  demosaic.py  denoise.py  gamma.py  histogram_normalization.py  ltm.py  post_gamma_denoise.py  raw_green_extract.py  rgb2yuv.py  saturation.py  sharpening.py
isp/training/: __init__.py  quality_loss.py  training_utils.py
metrics/: calculate_metrics.py  vif.py
notebooks/: e2e_train_colab.ipynb  full_video_eval_colab.ipynb  optuna_isp_knobs_colab.ipynb  pretrain_cnn_colab.ipynb
notebooks/sanity/: e2e_smoke_sanity.ipynb  quality_overfit_sanity.ipynb
scripts/: __init__.py  evaluate_pretrain_checkpoint.py  extract_patches.py  fit_norm_weights.py  generate_synthetic_raw.py  inspect_quality_grads.py  make_presentation_plots.py  make_val_mini.py  pack_colab_dataset.py  precompute_isp_outputs.py  repro_e2e_nan.py  run_baseline.py  run_checkpoint_full_render_eval.py  run_e2e_setup.py  run_e2e_train.py  run_optuna_e2e_tuning.py  run_optuna_isp_knobs.py  run_overfit_test.py  run_pretrain_cnn.py  run_quality_overfit_test.py  run_traditional_isp.py  smoke_test_isp_optimizations.py
tests/: __init__.py  conftest.py  test_config.py  test_io.py  test_pipeline.py
(+1 files in other folders)
